--- a/src/index.css
+++ b/src/index.css
@@ -1,315 +1,40 @@
-
-
-main {
-  margin: 0 auto;
-  max-width: 90%;
-  padding: 50px 30px;
-} 
-
-* {
-  box-sizing: border-box;
-}
+/* 
+.profile-picture {
+  float: left;
+} */
 
 html,
 body {
   min-height: 100%;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  font-weight: 600;
-  line-height: 1.5;
-  font-size: 18px;
-  letter-spacing: .1em;
-  
+#main {
+  background-color: #40afafa9;
+
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 500;
-  margin: 5px 0;
-  line-height: 1.25;
-}
-
-h1 {
-  font-size: 2.25rem;
-}
-
-h2 {
-  font-size: 2rem;
-  font-family: 'Abril Fatface';
-  color: var(--darker);
-}
-
-h3 {
-  font-size: 1.75rem;
-}
-
-h4 {
-  font-size: 1.5rem;
-}
-
-h5 {
-  font-size: 1.25rem;
-}
-
-h6 {
-  /* font-size: 1rem; */
-  font-size: 22px;
-}
-
-p {
-  margin-top: 0;
-}
-
-a {
-  color: var(--tertiary);
-  text-decoration: none;
-  font-weight: bold;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-header {
-  background: var(--dark);
-}
-
-header a {
-  color: var(--light);
-}
-
-button {
-  font-size: 1rem;
-  text-decoration: none;
-  padding: 0.25rem 1rem;
-  border-radius: .5rem;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  margin: 0 1px;
-  background-color: var(--secondary);
-}
-
-button:hover {
-  opacity: .8;
-}
-
-button[disabled] {
-  cursor: default;
-  opacity: .8;
-}
-
-img {
-  max-width: 100%;
-}
-
-.key-title, .resume, .name, .title, .contact, .education {
-  /* font-weight: bold; */
-  color: black;
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
-}
-
-.profile-picture {
-/* max-height: 300px;
-border-radius: 300px; */
-margin: auto 70px;
-}
-
-.card > .content > ul > li {
-  margin-top: 18px;
-  background-color: white;
-}
-
-.wrapper {
-  padding-top: 50px;
-  height: 100%;
+#footer {
   display: flex;
-  flex-flow: row wrap;
-  padding: 20px;
-  justify-content: space-around;
-  align-content: flex-start;
-  overflow: auto;
+  min-height: 100vh;
+  /* flex-direction: column; */
+}
+
+#about-container {
+  background-color: #ff8652b4;
+  bottom: 60%;
+  /* min-height: 0vh; */
+  margin: 0 auto;
+max-width: 90%;
+}
+
+.education {
+  width: 70%;
+  font-size: 25px;
 }
 
 .card {
-  background-color: white;
-  border-radius: 2px;
-  height: 525px;
-  margin: 1rem;
-  position: relative;
-  width: 325px;
-  box-shadow: 0 3px 6px #999, 0 3px 6px #999;
-  text-align: left;
+  margin: 0 0 20px 0;
+  border: 3px solid #85FFC7;
+  border-radius: #85FFC7;
 }
 
-.card > .img-container {
-  height: 50%;
-  overflow: hidden;
-  text-align: center;
-  border-radius: 10px;
-  background-color: white;
-}
-.card > .img-container > img {
-  width: 100%;
-  padding: 25px;
-  background-color: white;
-}
-
-.card > .content {
-  padding-right: 1rem;
-  font-size: 18px;
-  background-color: white;
-  color: black;
-  font-weight: bold;
-}
-
-.card > .content > ul {
-  list-style-type: none;
-  background-color: white;
-}
-
-.card > .content > ul > li {
-  margin-top: 18px;
-  background-color: white;
-}
-
-.wrapper {
-  padding-top: 50px;
-  height: 100%;
-  display: flex;
-  flex-flow: row wrap;
-  padding: 20px;
-  justify-content: space-around;
-  align-content: flex-start;
-  overflow: auto;
-}
-.icon {
-  padding: 10px;
-}
-
-.nav {
-  justify-content: flex-end;
-  font-size: 24px;
-}
-
-#port-icon {
-  background-color: white;
-  margin: 0px 20px;
-}
-
-.project-title {
-  background-color: white;
-  font-weight: bold;
-  font-family: 'Shadows Into Light', cursive;
-
-}
-
-.project-description {
-  background-color: white;
-  font-weight: normal;
-  color: #660033;
-}
-
-.project-icons {
-  background-color: white;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-}
-
-#contact-form {
-  margin: 15px 500px;
-  font-size: 18px;
-  color: #cf6a87;
-  font-weight: bold;
-}
-
-.contact-icons {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-content: center;
-}
-
-.resume-container {
-  margin: 20px 50px;
-  color: #cf6a87;
-  font-weight: bold;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  font-size: 22px;
-}
-
-.nav-link, .link, .btn {
-  color: #660033;
-  font-weight: bold;
-}
-
-.nav-link:hover, .link:hover {
-  color: #cf6a87;
-  font-weight: bold;
-  text-decoration: none;
-}
-
-.active {
-  color: #cf6a87;
-}
-
-.banner {
-  width: 100%;
-}
-
-.my-image {
-  border-radius: 50%;
-  padding: 50px 50px;
-}
-
-.contact-container {
-  margin: 100px;
-  justify-content: center;
-}
-
-@media screen and (max-width: 767px) { 
-  p, .resume-container {
-    font-size: 20px;
-  }
-
-  .education, .resume {
-    font-size: 24px;
-  }
-
-  .image {
-    width: 200%;
-    height: 100%;
-  }
-
-  .name {
-    font-size: 35px;
-    color: #660033;
-    letter-spacing: normal;
-  }
-  
-  .job {
-    font-size: 30px;
-    color: #660033;
-  }
-
-  .nav {
-    justify-content: flex-end;
-    font-size: 22px;
-  }
-
-  .contact-icons, .icon-text {
-    margin: auto 50%; 
-  }
-  
-}
