--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
-/* 
-.profile-picture {
-  float: left;
-} */
 
 html,
 body {
@@ -13,10 +9,12 @@ body {
 
 }
 
+
 #footer {
   display: flex;
-  min-height: 100vh;
+  min-height: 40vh;
   /* flex-direction: column; */
+  padding-left: 50%;
 }
 
 #about-container {
@@ -25,6 +23,11 @@ body {
   /* min-height: 0vh; */
   margin: 0 auto;
 max-width: 90%;
+padding: 50px;
+}
+
+#about-container img { 
+  left: 50%;
 }
 
 .education {
@@ -32,9 +35,201 @@ max-width: 90%;
   font-size: 25px;
 }
 
-.card {
+/* .card {
   margin: 0 0 20px 0;
   border: 3px solid #85FFC7;
   border-radius: #85FFC7;
 }
 
+#about-container, #image-container, .education-container {
+  margin: 0px 10px;
+} */
+
+
+.nav li {
+  padding: 10px 20px;
+ 
+}
+
+.nav li a {
+  text-decoration: none;
+  font-weight: 600;
+}
+
+
+.card {
+  background-color: white;
+  border-radius: 2px;
+  height: 525px;
+  margin: 1rem;
+  position: relative;
+  width: 325px;
+  box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+  text-align: left;
+}
+
+.card > .img-container {
+  height: 50%;
+  overflow: hidden;
+  text-align: center;
+  border-radius: 10px;
+  background-color: white;
+}
+.card > .img-container > img {
+  width: 100%;
+  padding: 25px;
+  background-color: white;
+}
+
+.card > .content {
+  padding-right: 1rem;
+  font-size: 18px;
+  background-color: white;
+  color: #f07039e1;
+  font-weight: bold;
+}
+
+.card > .content > ul {
+  list-style-type: none;
+  background-color: white;
+}
+
+.card > .content > ul > li {
+  margin-top: 18px;
+  background-color: white;
+}
+
+.wrapper {
+  padding-top: 50px;
+  height: 100%;
+  display: flex;
+  flex-flow: row;
+  padding: 20px;
+  justify-content: space-around;
+  align-content: flex-start;
+  overflow: auto;
+}
+
+
+.icon {
+  padding: 10px;
+}
+
+.nav {
+  justify-content: flex-end;
+  font-size: 24px;
+}
+
+#port-icon {
+  background-color: white;
+  margin: 0px 20px;
+}
+
+.project-title {
+  background-color: white;
+  font-weight: bold;
+  font-family: 'Shadows Into Light', cursive;
+
+}
+
+.project-description {
+  background-color: white;
+  font-weight: normal;
+  color: #660033;
+}
+
+.project-icons {
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+#contact-form {
+  margin: 15px 500px;
+  font-size: 18px;
+  color: #cf6a87;
+  font-weight: bold;
+}
+
+.contact-icons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+}
+
+.resume-container {
+  margin: 20px 50px;
+  color: #cf6a87;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  font-size: 22px;
+}
+
+.nav-link, .link, .btn {
+  color: #660033;
+  font-weight: bold;
+}
+
+.nav-link:hover, .link:hover {
+  color: #cf6a87;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.active {
+  color: #cf6a87;
+}
+
+.banner {
+  width: 100%;
+}
+
+.my-image {
+  border-radius: 50%;
+  padding: 50px 50px;
+}
+
+.contact-container {
+  margin: 100px;
+  justify-content: center;
+}
+
+@media screen and (max-width: 767px) { 
+  p, .resume-container {
+    font-size: 20px;
+  }
+
+  .education, .resume {
+    font-size: 24px;
+  }
+
+  .image {
+    width: 200%;
+    height: 100%;
+  }
+
+  .name {
+    font-size: 35px;
+    color: #660033;
+    letter-spacing: normal;
+  }
+  
+  .job {
+    font-size: 30px;
+    color: #660033;
+  }
+
+  .nav {
+    justify-content: flex-end;
+    font-size: 22px;
+  }
+
+  .contact-icons, .icon-text {
+    margin: auto 50%; 
+  }
+  
+}
