--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,8 @@ padding: 50px;
 }
 
 
+
+
 .card {
   background-color: white;
   border-radius: 2px;
@@ -159,9 +161,14 @@ padding: 50px;
   align-content: center;
 }
 
+.resume-intro {
+  font-weight: bold;
+  font-size: 20px;
+}
+
 .resume-container {
   margin: 20px 50px;
-  color: #cf6a87;
+  color: black;
   font-weight: bold;
   display: flex;
   justify-content: center;
@@ -197,6 +204,11 @@ padding: 50px;
   margin: 100px;
   justify-content: center;
 }
+
+
+
+
+
 
 @media screen and (max-width: 767px) { 
   p, .resume-container {
