--- a/src/index.css
+++ b/src/index.css
@@ -154,18 +154,22 @@ padding: 50px;
 }
 
 #contact-form {
-  margin: 15px 500px;
+  margin: 15px 100px;
   font-size: 18px;
-  color: #cf6a87;
+  color: black;
   font-weight: bold;
 }
 
-.contact-icons {
+#contact-form input {
+  margin: 20px;
+}
+
+/* .contact-icons {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-content: center;
-}
+} */
 
 .resume-intro {
   font-weight: bold;
