--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,25 @@ body {
   min-height: 100%;
 }
 
+/* Preloader */
+/* #preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999999;
+  background-color: #0c0513;
+  background-image: url(./assets/images/pre.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#preloader-none {
+  opacity: 0;
+} */
+
+
 .navButton {
   border-radius: 20%;
   
@@ -167,23 +186,6 @@ padding: 50px;
   align-content: center;
 }
 
-/* Preloader */
-#preloader {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 999999;
-  background-color: #0c0513;
-  background-image: url(./assets/pre.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-#preloader-none {
-  opacity: 0;
-}
 
 .resume-intro {
   font-weight: bold;
