--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 
+
 html,
 body {
   min-height: 100%;
@@ -21,6 +22,16 @@ body {
 #preloader-none {
   opacity: 0;
 } */
+
+/* tsparticles */
+#tsparticles {
+  position: fixed !important;
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+  width: 100%;
+  height: 100%;
+}
+
 
 
 .navButton {
